src/objects/Activitytype__c.object
<CustomObject>
    <fields>
        <fullName>Bar_color__c</fullName>
        <label>Bar color</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F__c</fullName>
        <description>This should be a choice from Marketing activities field set name</description>
        <label>Fieldset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <inlineHelpText>Give a url to a icon for the activity type this should be in size 24x24 px</inlineHelpText>
        <label>Url to icon</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sort__c</fullName>
        <label>sort</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activity types</label>
    <nameField>
        <label>Activity type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>